--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,13 @@
 sonar.projectKey=joaosoarees_http-api
+# defaults to project key
+sonar.projectName=application with SonarQube
+# defaults to 'not provided'
+sonar.projectVersion=1.0
+ 
+# Path is relative to the sonar-project.properties file. Defaults to .
+sonar.sources=src
+
+sonar.host.url=http://107.20.248.163:9000
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
