--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
 sonar.projectKey=joaosoarees_http-api
 sonar.pullrequest.provider=github
 sonar.sourceEncoding=UTF-8
+sonar.pullrequest.key=1
+sonar.pullrequest.base=master
+sonar.pullrequest.branch=develop
