--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,8 @@ sonar.sourceEncoding=UTF-8
 sonar.pullrequest.key=1
 sonar.pullrequest.base=master
 sonar.pullrequest.branch=develop
+sonar.branch.name=sonar
+
+if [[ "$CI_BRANCH_NAME" == master ]] || [[ "$CI_BRANCH_NAME" == **/* ]]; then
+  ./gradlew sonarqube
+fi
