--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=joaosoarees_http-api
 sonar.pullrequest.provider=github
 sonar.sourceEncoding=UTF-8
+sonar.pullrequest.branch=develop
+sonar.branch.name=sonar
 
 if [[ "$CI_BRANCH_NAME" == master ]] || [[ "$CI_BRANCH_NAME" == **/* ]]; then
   ./gradlew sonarqube
