--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=joaosoarees_http-api
 sonar.pullrequest.provider=github
 sonar.sourceEncoding=UTF-8
 sonar.pullrequest.branch=develop
-
+sonar.pullrequest.key=1
 if [[ "$CI_BRANCH_NAME" == master ]] || [[ "$CI_BRANCH_NAME" == **/* ]]; then
   ./gradlew sonarqube
 fi
