--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
         uses: kitabisa/sonarqube-action@v1.1.0
         with:
           host: ${{ secrets.SONAR_HOST_URL }}
-          login: ${{ secrets.SONARQUBE_TOKEN }}
+          login: ${{ secrets.SONAR_TOKEN }}
